# FastAPI-learn

./: ProductDB.db  UsersDataBase.db  database.py  main.py  pyproject.toml
async_core/: db.py  methods.py  models.py  schemas.py  views.py
core/: db.py  main.py  methods.py  models.py  schemas.py  views.py
go on/: database.py
go on/models/: user.py  user_methods.py
go on/routers/: user.py
models/: __init__.py  user.py  user_methods.py
routers/: user.py
schemas/: user.py
