[tool.poetry]
name = "np"
version = "0.1.0"
description = ""
authors = ["c1kvoy <seva33039@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
uvicorn = "^0.30.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
