[tool.poetry]
name = "np"
version = "0.1.0"
description = ""
authors = ["c1kvoy <seva33039@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
uvicorn = "^0.30.3"
aiosqlite = "^0.20.0"
greenlet = "^3.0.3"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
